2009-02-27  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2612649:
    * source/org/jfree/chart/editor/DefaultPlotEditor.java
    (DefaultPlotEditor): Added null Stroke to available options,
    (attemptOutlineStrokeSelection): Use current stroke.

2009-02-27  David Gilbert  <david.gilbert@object-refinery.com>

    Bug 2617557:
    * source/org/jfree/chart/plot/dial/StandardDialScale.java
    (draw): Use tickLabelPaint.

2009-02-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/RendererUtilities.java
    (findLiveItemsLowerBound): Added argument checks,
    (findLiveItemsUpperBound): Correct calculation of mid.

2009-02-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/GradientXYBarPainter.java
    (paintBar): Use correct outline paint.

2009-02-13  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/jxlayer/Crosshair.java: New file,
    * source/org/jfree/chart/jxlayer/CrosshairLabelGenerator.java: New file,
    * source/org/jfree/chart/jxlayer/CrosshairLayerUI.java: New file,
    * source/org/jfree/chart/jxlayer/DefaultCrosshairLabelGenerator.java:
    New file,
    * source/org/jfree/chart/jxlayer/package.html: New file,
    * tests/org/jfree/chart/jxlayer/junit/CrosshairTests.java: New tests,
    * tests/org/jfree/chart/jxlayer/junit/JXLayerPackageTests.java: Likewise.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYPointerAnnotation.java
    (draw): Added support for rotated text, plus background paint and
    outline paint/stroke.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYTextAnnotation.java
    (backgroundPaint): New field,
    (outlineVisible): Likewise,
    (outlinePaint): Likewise,
    (outlineStroke): Likewise,
    (XYTextAnnotation): Initialise new fields,
    (getBackgroundPaint): New method,